name:		hack9p
version:	0.0.4
license:	GPL-3
license-file:	COPYING
author:		David M. Rogers <predictivestatmech@gmail.com>, Tim Newsham <newsham@lava.net>, Dave Leimbach <leimy2k@gmail.com>
maintainer:	David M. Rogers <predictivestatmech@gmail.com>
stability:	Experimental
homepage:	https://github.com/frobnitzem/hack9p
synopsis:	9P2000 in pure Haskell
category:	Network
description:	Pure Haskell implementation of the 9P2000 protocol from the 
		Plan 9 and Inferno operating systems.  Many implementations of
		9P2000 exist including the Linux kernel v9fs module, wmii 
		(X window manager).  More information on 9P and implementations
		may be found at http:\/\/9p.cat-v.org
build-type:	Simple
cabal-version:	>= 1.8.0.2
tested-with:	GHC == 7.4.1

flag bytestring-in-base

library
    if flag(bytestring-in-base)
      -- bytestring was in base-2.0 and 2.1.1
      build-depends: base >= 2.0 && < 2.2, binary >= 0.5.0.2, scalable-server >= 0.2.2, text >= 0.4, attoparsec >= 0.10, attoparsec-binary >= 0.2, blaze-builder >= 0.3
    else
      -- inbase 1.0 and 3.0 bytestring is a separate package
      build-depends: base < 2.0 || >= 3, bytestring >= 0.9, binary >= 0.5.0.2, scalable-server >= 0.2.2, text >= 0.4, attoparsec >= 0.10, attoparsec-binary >= 0.2, blaze-builder >= 0.3

    hs-source-dirs:   src
    exposed-modules:  Network.Plan9

    ghc-options:      -O2 -Wall
